remove password in user collection
