# app/Http/Resources/UserCollection.php
@@ -9,7 +9,6 @@ use Illuminate\Http\Resources\Json\JsonResource;
  *   @OA\Property(property="id", type="integer", example="id"),
  *   @OA\Property(property="name", type="string", example="name"),
  *   @OA\Property(property="email", type="string", example="email"),
- *   @OA\Property(property="password", type="string", example="password"),
  */
 class UserCollection extends JsonResource
 {
@@ -25,7 +24,6 @@ class UserCollection extends JsonResource
             'id'=> $this->id,
             'name' => $this->name,
             'email' => $this->email,
-            'password' => $this->password,
         ];
     }
 }
